<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_bonjour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:text="@string/text_view_bonjour"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNom"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="80dp"
        android:autofillHints=""
        android:ems="14"
        android:hint="@string/edit_text"
        android:inputType="textPersonName"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_bonjour"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnCommencer"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/btn_commenser_inactive"
        android:enabled="false"
        android:onClick="Commencer"
        android:text="@string/btn_commencer_quiz"
        android:textColor="@color/btn_text_inactive"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNom"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/Delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:contentDescription="@string/btn_delete"
        android:enabled="false"
        android:onClick="Delete"
        app:layout_constraintEnd_toEndOf="@id/editTextNom"
        app:layout_constraintTop_toBottomOf="@id/textView_bonjour"
        app:srcCompat="@android:drawable/ic_delete"
        app:tint="@color/btn_delete_inactive"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>